--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GameList</string>
     <string name="details">Detalhes</string>
+    <string name="game_name">Nome do Jogo</string>
+    <string name="console">Console</string>
 </resources>
